# WarOfTheWorlds

./: .gitignore
Sensors2OSC/: build.gradle  gradle.properties  settings.gradle
Sensors2OSC/SuperCollider-aar/: build.gradle
Sensors2OSC/SuperCollider-library/: build.gradle
Sensors2OSC/SuperCollider-library/src/main/: AndroidManifest.xml
Sensors2OSC/SuperCollider-library/src/main/assets/: PlayABuffer.scsyndef  sine.scsyndef  test.scsyndef
Sensors2OSC/app/: build.gradle
Sensors2OSC/app/libs/: SuperCollider-library-release.aar
Sensors2OSC/app/src/main/: AndroidManifest.xml
Sensors2OSC/app/src/main/assets/: bufSticker.scsyndef  default.scsyndef  not_default.scsyndef  startup.scd  (+3 more)
Sensors2OSC/gradle/wrapper/: gradle-wrapper.properties
SuperCollider-Android-studioproject/: import-summary.txt  settings.gradle
SuperCollider-Android-studioproject/app/: build.gradle  make15140-1.bat
SuperCollider-Android-studioproject/gradle/wrapper/: gradle-wrapper.properties
TestScripts/: portlistener.py
TestingSuperCollider/app/: CMakeLists.txt  build.gradle
TestingSuperCollider/app/src/androidTest/java/com/example/karis/testingsupercollider/: ExampleInstrumentedTest.java
TestingSuperCollider/app/src/main/: AndroidManifest.xml
TestingSuperCollider/app/src/main/cpp/: native-lib.cpp
TestingSuperCollider/app/src/main/cpp/supercollider/: .gitignore
TestingSuperCollider/app/src/main/cpp/supercollider/common/: SC_Lock.h
TestingSuperCollider/app/src/main/cpp/supercollider/server/scsynth/: SC_CoreAudio.cpp  SC_World.cpp
TestingSuperCollider/app/src/main/java/com/example/karis/testingsupercollider/: MainActivity.java
TestingSuperCollider/app/src/main/res/layout/: activity_main.xml  content_main.xml
TestingSuperCollider/app/src/main/res/menu/: menu_main.xml
TestingSuperCollider/app/src/main/res/values/: strings.xml
TestingSuperCollider/app/src/test/java/com/example/karis/testingsupercollider/: ExampleUnitTest.java
TestingSuperCollider/gradle/wrapper/: gradle-wrapper.properties
WotWApp/: README  build.gradle  gradle.properties  settings.gradle
WotWApp/SuperCollider-library/: build.gradle
WotWApp/app/: build.gradle
WotWApp/app/src/main/: AndroidManifest.xml
supercollider/: bufSticker.scd  portlistener.py  sc-osc-sensors-server-test.scd  sonar.scd
supercollider/Alien Orientation/: sc-orientation-detection-smear.scd
supercollider/SuperColliderOSCReceiver/: checkOSCmessages.scd
supercollider/testing-synths/: bhob-syndef-test.scd  generate-testing-syndefs.scd
(+96 files in other folders)
